Added java8 support